Fix the size of the topology on mobile. (#1434)

--- a/src/components/InfoPanel/_info-panel.scss
+++ b/src/components/InfoPanel/_info-panel.scss
@@ -30,8 +30,13 @@
     .p-icon--fullscreen {
       bottom: 10px;
       cursor: pointer;
+      display: none;
       position: absolute;
       right: 10px;
+
+      @include medium {
+        display: inline-block;
+      }
     }
   }
 
